properly bundling typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "outDir": "out",
-      "module": "system",
-      "sourceMap": true,
-      "lib": [
-        "dom",
-        "es2015",
-        "es5",
-        "es6"
-      ]
-    }
+  "compilerOptions": {
+    "target": "es5",
+    "outFile": "./bundle.js",
+    "module": "system",
+    "sourceMap": true,
+    "lib": [
+      "dom",
+      "es2015",
+      "es5",
+      "es6"
+    ]
   }
+}
